--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,6 +23,11 @@
     <%= form.file_field :pdf_file, class: "form-control" %>
   </div>
 
+  <div class="mb-3">
+  <%= form.label :cover_image, "Imagem de Capa (Opcional)", class: "form-label" %>
+  <%= form.file_field :cover_image, class: "form-control" %>
+  </div>
+
   <div>
     <%# Adicionadas as classes 'btn btn-primary' para o botão %>
     <%= form.submit "Salvar Artigo", class: "btn btn-primary" %>
