--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,23 +6,19 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%# --- GOOGLE FONTS --- %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
     
-    <%# --- BOOTSTRAP CSS (VIA CDN) --- %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <%# --- NOSSO ARQUIVO DE ESTILOS (FONTES) --- %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
     <style>
       :root {
-        --bs-primary: #20c997; /* A cor verde que você escolheu */
+        --bs-primary: #20c997;
         --bs-primary-rgb: 32, 201, 151;
       }
-      /* Bônus: Deixa os links com a nova cor primária também */
       a {
         color: var(--bs-primary);
       }
@@ -35,7 +31,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
         <%= link_to "Sistema De Artigos", root_path, class: "navbar-brand" %>
-        <div class="collapse navbar-collapse">
+
+        <%# --- BOTÃO HAMBURGER (NO LUGAR CORRETO) --- %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <%# DIV COLAPSÁVEL COM O ID CORRETO %>
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <% if user_signed_in? && !current_user.admin? %>
               <li class="nav-item">
@@ -53,22 +56,31 @@
               </li>
             <% end %>
           </ul>
-          <div class="d-flex">
-            <% if user_signed_in? %>
-              <span class="navbar-text me-3">
-                Olá, <%= current_user.email %>
-              </span>
-              <%= button_to "Sair", destroy_user_session_path, method: :delete, class: "btn btn-outline-light" %>
+          
+          <ul class="navbar-nav">
+             <% if user_signed_in? %>
+              <li class="nav-item">
+                <span class="navbar-text me-3">
+                  Olá, <%= current_user.email %>
+                </span>
+              </li>
+              <li class="nav-item">
+                <%= button_to "Sair", destroy_user_session_path, method: :delete, class: "btn btn-outline-light" %>
+              </li>
             <% else %>
-              <%= link_to "Entrar", new_user_session_path, class: "btn btn-outline-light me-2" %>
-              <%= link_to "Cadastrar", new_user_registration_path, class: "btn btn-light" %>
+               <li class="nav-item">
+                <%= link_to "Entrar", new_user_session_path, class: "btn btn-outline-light me-2" %>
+               </li>
+               <li class="nav-item">
+                <%= link_to "Cadastrar", new_user_registration_path, class: "btn btn-light" %>
+               </li>
             <% end %>
-          </div>
+          </ul>
         </div>
       </div>
     </nav>
 
-    <main class="container mt-4">
+    <main class="container mt-4 content-fade-in">
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
       <% end %>
