--- a/app/views/dashboard/student.html.erb
+++ b/app/views/dashboard/student.html.erb
@@ -1,7 +1,7 @@
 <h1>Meus Artigos Enviados</h1>
 
 <p>
-  <%= link_to "Enviar Novo Artigo", new_article_path, class: "btn btn-primary" %>
+  <%= link_to "Enviar Novo Artigo", new_article_path, class: "btn btn-secondary" %>
 </p>
 
 <hr>
