--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -20,7 +20,7 @@
           class: "form-control me-2",
           placeholder: "Buscar por título...",
           value: params[:query] %>
-    <%= form.submit "Buscar", class: "btn btn-outline-secondary" %>
+    <%= form.submit "Buscar", class: "btn btn-secondary" %>
   <% end %>
 
 <% if @approved_articles.any? %>
