--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Editing article" %>
+<% content_for :title, "Editando artigo" %>
 
-<h1>Editing article</h1>
+<h1>Editar Artigo</h1>
 
 <%= render "form", article: @article %>
 
