--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
-<% content_for :title, "Articles" %>
+<% content_for :title, "Artigos" %>
 
-<h1>Articles</h1>
+<h1>Artigos</h1>
 
 <div id="articles">
   <% @articles.each do |article| %>
