Adiciona páginas estáticas de ajuda e contato, incluindo formulários e mailer para envio de mensagens

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,13 +64,14 @@
   <div class="top-bar bg-primary text-white py-1">
     <div class="container d-flex justify-content-between align-items-center">
       <div>
-        <a href="#" class="text-white me-2"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="text-white me-2"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="text-white"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.facebook.com/share/1EWpyp86zj/?mibextid=wwXIfr" class="text-white me-2"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/sif.unirios?igsh=MXh6end0NjZoczE5Ng==" class="text-white me-2"><i class="bi bi-instagram"></i></a>
+        <a href="https://youtube.com/channel/UCOmkwSuWMGrr70gdntegIYg/UniriosCentroUniversit%C3%A1rio?si=Nt9ILNiGmOAIt6vR" class="text-white"><i class="bi bi-youtube"></i></a>
       </div>
       <div class="d-none d-lg-flex">
-        <a href="#" class="nav-link text-white me-3"><i class="bi bi-question-circle-fill"></i> Ajuda</a>
-        <a href="#" class="nav-link text-white"><i class="bi bi-telephone-fill"></i> Fale Conosco</a>
+        <a href="<%= ajuda_path %>" class="nav-link text-white me-3"><i class="bi bi-question-circle-fill"></i> Ajuda</a>
+
+        <a href="<%= fale_conosco_path %>" class="nav-link text-white"><i class="bi bi-telephone-fill"></i> Fale Conosco</a>
       </div>
     </div>
   </div>
