--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -143,7 +143,7 @@
     <footer class="bg-dark text-white text-center p-4 mt-5">
       <div class="container">
         <p class="mb-0">© <%= Time.now.year %> Sistema de Artigos. Todos os direitos reservados.</p>
-        <p>Desenvolvido com Ruby on Rails</p>
+        <p>Desenvolvido com Ruby on Rails, pela melhor turma de sistemas.</p>
       </div>
     </footer>
 
