--- a/app/views/paginas_estaticas/fale_conosco.html.erb
+++ b/app/views/paginas_estaticas/fale_conosco.html.erb
@@ -7,6 +7,13 @@
       </p>
 
       <%= form_with(url: fale_conosco_path, method: :post, local: true) do |form| %>
+
+        <%# O campo honeypot deve vir AQUI DENTRO do form_with %>
+        <div class="mb-3 honeypot" aria-hidden="true">
+          <%= form.label :nickname, "Se você é humano, deixe este campo em branco" %>
+          <%= form.text_field :nickname, class: "form-control", tabindex: -1, autocomplete: "off" %>
+        </div>
+
         <div class="mb-3">
           <%= form.label :nome, class: "form-label" %>
           <%= form.text_field :nome, class: "form-control", required: true, placeholder: "Seu nome completo" %>
@@ -25,6 +32,7 @@
         <div class="d-grid">
           <%= form.submit "Enviar Mensagem", class: "btn btn-primary btn-lg" %>
         </div>
+        
       <% end %>
     </div>
   </div>
